--- a/package.json
+++ b/package.json
@@ -4,14 +4,45 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test/qqCrawl.test.js",
-    "start": "node index.js"
+    "start": "node bin/app.js",
+    "start1": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "mongod": "mongod"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "classnames": "^2.2.5",
     "express": "^4.16.2",
-    "socket.io": "^2.0.4"
+    "mongodb": "^3.0.1",
+    "mongorito": "^3.0.4",
+    "plyr": "^2.0.18",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-modal": "^3.1.10",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "shortid": "^2.2.8",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
+  },
+  "devDependencies": {
+    "jest": "^21.2.1"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/test/spec_helper.ts"
+    ],
+    "testMatch": [
+      "**/test/*.js"
+    ]
   }
 }
